2008-06-15  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Removed the mention of the single-stage 
	limitation because this was fixed in 0.7/0.8.

2008-06-15  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Hopefully made the explanation of 
	layout modes a little clearer.

2008-06-14  Jan Arne Petersen  <jpetersen@openismus.com>

	* docs/tutorial/clutter-tut.xml: Rewrite some text regarding the new
	layout system introduced in clutter 0.7.

	* examples/custom_container/examplebox.c (example_box_remove,
	  example_box_pack): Call clutter_actor_queue_relayout instead of the
	custom layout function.
	  (example_box_get_preferred_width,
	  example_box_get_preferred_height): Use the new layout system to
	implement a width for height geometry management.
	  (example_box_allocate): Move the layout algorithm
	into the allocation function and use the new layout system to get
	the preferred size of the child actors and to set their position.
	  (example_box_init): Set geometry management to "width for height".
	* examples/custom_container/examplebox.h: Remove unused allocation
	store.
	* examples/custom_container/main.c (main): Use preferred container size.
	* examples/full_example/main.c (rotate_all_until_item_is_at_front):
	Fix a typo.
	* examples/multiline_text_entry/multiline_entry.c
	  (example_multiline_entry_allocate,
	  example_multiline_entry_class_init): Implement virtual allocate
	function instead of the old request_coords function.
	* examples/scrolling/scrollingcontainer.c
	  (example_scrolling_container_pack,
	  example_scrolling_container_remove,
	  example_scrolling_container_scroll_left): Call
	clutter_actor_queue_relayout instead of the custom layout function.
	  (example_scrolling_container_allocate): Move the layout algorithm
	into the allocation function and use the new layout system to get
	the preferred size of the child actors and to set their position.